--- a/index.html
+++ b/index.html
@@ -10,21 +10,25 @@
 </head>
 <body>
 <div id="container">
-    <form action="#" method="get">
+    <form  action="#" method="get" novalidate>
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" placeholder="you@email.com" required>
         <br>
         <label for="country">Country:</label>
-        <input type="text" id="country" name="country" required pattern="[a-zA-Z'-'\s]*">
+        <input type="text" id="country" name="country" placeholder="Uk" required pattern="[a-zA-Z'-'\s]*">
         <br>
         <label for="zip-code">Zip Code:</label>
-        <input type="number" id="zip-code" name="zip-code" inputmode="numeric" required pattern="^(?(^00000(|-0000))|(\d{5}(|-\d{4})))$">
+        <input type="number" id="zip-code" name="zip-code" placeholder="12345" inputmode="numeric" required pattern="^(?(^00000(|-0000))|(\d{5}(|-\d{4})))$">
         <br>
         <label for="pass">Password:</label>
-        <input type="text" id="pass" name="pass" required>
+        <input type="password" id="pass" name="pass" placeholder="something strong" required>
         <br>
         <label for="con-pass">Confirm Password:</label>
-        <input type="text" id="con-pass" name="con-pass" required>
+        <input type="password" id="con-pass" name="con-pass" placeholder="something strong" required>
+        <div class="btns">
+            <button id="sub" type="submit">Submit</button>
+            <button id="reset" type="reset">Reset</button>
+        </div>
     </form>
 </div>
 </body>
